--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,10 @@ fieldset {
     flex-direction: column;
 }
 
+.entryForm {
+    border: dashed 1px cadetblue;
+    padding: 25px;
+}
 
 .entry-item {
     background: rgb(221, 237, 238);
